--- a/styles/modules/redBanner.css
+++ b/styles/modules/redBanner.css
@@ -12,3 +12,13 @@
     font-weight: var(--body-hightlight-font-weight);
     margin: 0 0 1rem 0;
 }
+
+@media (max-width: 768px) {
+  .redBanner {
+    padding: 2.75rem 0 2.75rem 0;
+  }
+
+  .redBanner__title {
+    margin-bottom: 2rem;
+  }
+}
