--- a/styles/main.css
+++ b/styles/main.css
@@ -14,73 +14,86 @@
 
 /* Design System */
 :root {
-    /* Colors */
-    --red-highlight: #D2483D;
-    --light-grey: #F3F3F3;
-    --black: #000000;
-    --white: #FFFFFF;
-    
-    
-    /* Text configuration */
-    --body-font: 'Montserrat';
-    --body-highlight-font: 'Montserrat';
-    --header-font: 'Bebas Neue';
-    --title-font: 'Bebas Neue';
-    
-    
-    --body-font-weight: 400;
-    --body-highlight-font-weight: 600;
-    --header-font-weight: 400;
-    --title-font-weight: 400;
-    
-    
-    --body-font-size: 1.25rem;
-    --body-highlight-font-size: 1.25rem;
-    --header-font-size: 4.5rem;
-    --title-font-size: 1.5rem;
-    
-    
-    --body-line-height: 1.5rem;
-    --body-highlight-line-height: 1.5rem;
-    --header-line-height: 5.375rem;
-    --title-line-height: 1.75rem;
+  /* Colors */
+  --red-highlight: #D2483D;
+  --light-grey: #F3F3F3;
+  --black: #000000;
+  --white: #FFFFFF;
+  
+  
+  /* Text configuration */
+  --body-font: 'Montserrat';
+  --body-highlight-font: 'Montserrat';
+  --header-font: 'Bebas Neue';
+  --title-font: 'Bebas Neue';
+  
+  
+  --body-font-weight: 400;
+  --body-highlight-font-weight: 600;
+  --header-font-weight: 400;
+  --title-font-weight: 400;
+  
+  --body-font-size: 1.25rem;
+  --body-highlight-font-size: 1.25rem;
+  --header-font-size: 4.5rem;
+  --title-font-size: 1.5rem;
+  
+  --body-line-height: 1.5rem;
+  --body-highlight-line-height: 1.5rem;
+  --header-line-height: 5.375rem;
+  --title-line-height: 1.75rem;
 }
 
 body {
-    background-color: var(--light-grey);
-    font-family: var(--body-font);
-    font-style: normal;
-    font-weight: var(--body-font-weight);
-    font-size: var(--body-font-size);
-    line-height: var(--body-line-height);
-    color: var(--black);
+  background-color: var(--light-grey);
+  font-family: var(--body-font);
+  font-style: normal;
+  font-weight: var(--body-font-weight);
+  font-size: var(--body-font-size);
+  line-height: var(--body-line-height);
+  color: var(--black);
 }
 
 h1 {
-    font-family: var(--header-font);
-    font-style: normal;
-    font-weight: var(--header-font-weight);
-    font-size: var(--header-font-size);
-    line-height: var(--header-line-height);
-    color: var(--black);
+  font-family: var(--header-font);
+  font-style: normal;
+  font-weight: var(--header-font-weight);
+  font-size: var(--header-font-size);
+  line-height: var(--header-line-height);
+  color: var(--black);
 }
 
 h2 {
-    font-family: var(--title-font);
-    font-style: normal;
-    font-weight: var(--title-font-weight);
-    font-size: var(--title-font-size);
-    line-height: var(--title-line-height);
-    color: var(--black);
-    text-decoration: underline var(--red-highlight);
-    text-underline-offset: 0.25rem;
-    text-decoration-thickness: 0.188rem;
+  font-family: var(--title-font);
+  font-style: normal;
+  font-weight: var(--title-font-weight);
+  font-size: var(--title-font-size);
+  line-height: var(--title-line-height);
+  color: var(--black);
+  text-decoration: underline var(--red-highlight);
+  text-underline-offset: 0.25rem;
+  text-decoration-thickness: 0.188rem;
 }
 
 .color-highlight {
-    color: var(--red-highlight);
+  color: var(--red-highlight);
 }
 
 .text-highlight {
-    font-weight: var(--body-hightlight-font-weight);
+  font-weight: var(--body-hightlight-font-weight);
+}
+
+@media (max-width: 768px) {
+  :root {
+    /* Mobile Variables */
+    --body-font-size: 1rem;
+    --body-highlight-font-size: 1rem;
+    --header-font-size: 2.5rem;
+    --title-font-size: 1.25rem;
+  
+    --body-line-height: 1.25rem;
+    --body-highlight-line-height: 1.25rem;
+    --header-line-height: 3rem;
+    --title-line-height: 1.5rem;
+  }
 }
