--- a/styles/modules/cta.css
+++ b/styles/modules/cta.css
@@ -16,3 +16,9 @@
     text-underline-offset: 0.25rem;
     text-decoration-thickness: 0.188rem;
 }
+
+@media (max-width: 768px) {
+  .cta {
+    padding: 0.75rem 4.75rem 0.75rem 4.75rem;
+  }
+}
