--- a/styles/pages/contact.css
+++ b/styles/pages/contact.css
@@ -1,21 +1,45 @@
 .contact {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact__title {
+  margin: 6rem 0 2.5rem 0.75rem;
+}
+
+.contact__addressContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 6rem;
+}
+
+.contact__address {
+  padding: 0 1.5rem;
+  margin-top: 0;
+}
+
+@media (max-width: 768px) {
   .contact__title {
-    margin: 6rem 0 2.5rem 0.75rem;
+    margin: 2.25rem 0 0.5rem 0
   }
-  
+
   .contact__addressContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 6rem;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 0;
   }
-  
+
   .contact__address {
-    padding: 0 1.5rem;
-    margin-top: 0;
+    padding: 0 0;
+    margin: 0 0 0.75rem 0;
+    text-align: center;
   }
+
+  .contact__addressTitle {
+    font-size: 1.25rem;
+    line-height: 1.5rem;
+  }
+
+}
